--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "postcss": "^8.5.3",
